# id.wiazor.com

./: Dockerfile  README.md  pyproject.toml
src/identity/: __init__.py  config.py  database.py  dependencies.py  events.py  exceptions.py  main.py  memory_store.py
src/identity/adapters/: __init__.py  egrul_client.py
src/identity/api/: auth.py  health.py  internal.py  jwks.py  organizations.py
src/identity/db/: __init__.py
src/identity/db/migrations/: 001_identity_baseline.sql  002_identity_audit_log.sql
src/identity/db/repositories/: __init__.py  org_repo.py  user_repo.py
src/identity/models/: __init__.py  common.py  enums.py  organization.py  user.py
src/identity/services/: __init__.py  audit_logger.py  auth_service.py  org_service.py  rbac.py
